own problem fixed on mobile layout

--- a/SmartCampus/static/css/smartcampus.css
+++ b/SmartCampus/static/css/smartcampus.css
@@ -163,7 +163,7 @@ label[name=textAreaCounter] {
     padding-left: 20%;
 	}
 	.sidebar-element{
-	white-space: normal;
-}
+	font-size:x-small;
+	}
 }
 
